--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.0.0",
+    "intersection-observer": "^0.12.2",
     "tailwindcss": "^3.3.3"
   }
 }
